--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kevin 'KD' Dorsey</title>
+  <title>Kevin 'KD' Dorsey Live Better, Sell Better</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -41,15 +41,7 @@
   <link href="css/style.css" rel="stylesheet">
 
       
-      <script>
-          var typed1 = new Typed('#typed1', {
-              stringsElement: '#typed-strings1',
-          typeSpeed: 72,
-          backSpeed: 24,
-          fadeOut: false,
-              loop: true
-            });
-      </script>
+      
 </head>
 
 <body>
@@ -118,7 +110,7 @@
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Kevin <span class="wave">'KD'</span> Dorsey</h2>
-          <div id="typed-strings1">
+          <div id="typed-strings">
               <p><strong>Build Sales Teams</strong></p>
               <p><strong>Train Sales Reps</strong></p>
               <p><strong>Drives Behavior</strong></p>
@@ -127,7 +119,7 @@
               <p><strong>Live Better Sell Better</strong></p>
               <p><strong>Focus on the "Person" in "SalesPerson"</strong></p>
           </div>
-          <span id="typed1"></span>
+          <span id="typed"></span>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -1021,6 +1013,15 @@
   <!-- <div id="preloader"></div> -->
 
   <!-- JavaScript Libraries -->
+  <script src="typed.js"></script>
+  <script>
+    var typed = new Typed('#typed',{
+                    stringsElement: '#typed-strings',
+                    backSpeed: 40,
+                    typeSpeed: 40,
+                    loopt: true;
+                  });
+  </script>
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
