--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Kevin 'KD' Dorsey Live Better, Sell Better</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Kevin KD Dorsey, Live Better, Sell Better, " name="keywords">
-  <meta content="" name="description">
+  <meta content="Kevin KD Dorsey, Live Better, Sell Better" name="keywords">
+  <meta content="Focusing on the 'Person' in SalesPerson, just as much as the Sales." name="description">
       <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
           <meta property="og:site_name" content="Kevin 'KD' Dorsey" /> <!-- website name -->
           <meta property="og:site" content="https://abtinbidgoli.github.io/kd" /> <!-- website link -->
