--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
           <div class="col-lg-7 col-md-6">
             <div class="about-content">
-              <h2>Meet <span class="wave">'KD'</span></h2>
+              <h2>Meet <span><span class="wave">'KD'</span></span></h2>
               <h3>Linkedin Top Sales Voice 2020 ~ SaaS Sales Consultant ~ Sales Dev. Exec of the Year ~ InsideSales Top 10 Sales Leader ~ Avid Swearer</h3>
               <p>Formal Education will make you a living… Self Education will make you a fortune. ~ Jim Rohn</p>
               <p>As I've grown as a leader I have a better understanding of what truly drives behavior, motivation, and long term success. If we can make better people, the sales will follow.</p>
@@ -283,19 +283,19 @@
               </p>
 
               <div class="features wow bounceInUp clearfix">
-                <i class="fa fa-diamond" style="color: #f058dc;"></i>
+                <span class="wave"><i class="fa fa-diamond" style="color: #f058dc;"></i></span>
                 <h4>Corporis dolorem</h4>
                 <p>Commodi quia voluptatum. Est cupiditate voluptas quaerat officiis ex alias dignissimos et ipsum. Soluta at enim modi ut incidunt dolor et.</p>
               </div>
 
               <div class="features wow bounceInUp clearfix">
-                <i class="fa fa-object-group" style="color: #ffb774;"></i>
+                <span class="wave"><i class="fa fa-object-group" style="color: #ffb774;"></i></span>
                 <h4>Eum ut aspernatur</h4>
                 <p>Molestias eius rerum iusto voluptas et ab cupiditate aut enim. Assumenda animi occaecati. Quo dolore fuga quasi autem aliquid ipsum odit. Perferendis doloremque iure nulla aut.</p>
               </div>
               
               <div class="features wow bounceInUp clearfix">
-                <i class="fa fa-language" style="color: #589af1;"></i>
+                <span class="wave"><i class="fa fa-language" style="color: #589af1;"></i></span>
                 <h4>Voluptates dolores</h4>
                 <p>Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur. Totam dolores ut enim ullam voluptas distinctio aut.</p>
               </div>
