--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
     <section id="faq">
       <div class="container">
         <header class="section-header">
-          <h3>Frequently Asked Questions</h3>
+          <h3>Frequently Asked <span class="wave">Questions</span></h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </header>
 
@@ -911,7 +911,7 @@
                 <div class="col-sm-6">
 
                   <div class="footer-info">
-                    <h3>Kevin <span class="wave">'KD'</span> Dorsey</h3>
+                    <h3>Kevin <span><span class="wave">'KD'</span></span> Dorsey</h3>
                     <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
                   </div>
 
