--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3 class="section-title"><span class="wave">'KD'</span> Portfolio</h3>
+          <h3 class="section-title">Portfolio of <span class="wave">'KD'</span></h3>
         </header>
 
         <div class="row">
