--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Kevin <span class="wave">'KD'</span> Dorsey</h2>
+          <script>
+            var typed = new Typed('#typed', {
+            stringsElement: '#typed-strings'
+          });
+          </script>
           <div id="typed-strings">
               <p><strong>Build Sales Teams</strong></p>
               <p><strong>Train Sales Reps</strong></p>
