--- a/index.html
+++ b/index.html
@@ -110,12 +110,7 @@
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Kevin <span class="wave">'KD'</span> Dorsey</h2>
-          <script>
-            var typed = new Typed('#typed', {
-            stringsElement: '#typed-strings'
-          });
-          </script>
-          <div id="typed-strings">
+          <div id="typed-strings1">
               <p><strong>Build Sales Teams</strong></p>
               <p><strong>Train Sales Reps</strong></p>
               <p><strong>Drives Behavior</strong></p>
@@ -124,7 +119,7 @@
               <p><strong>Live Better Sell Better</strong></p>
               <p><strong>Focus on the "Person" in "SalesPerson"</strong></p>
           </div>
-          <span id="typed"></span>
+          <span id="typed1"></span>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -1019,17 +1014,15 @@
 
   <!-- JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-  <script>
-    // Can also be included with a regular script tag
-import Typed from 'typed.js';
-
-var options = {
-  strings: ['<i>First</i> sentence.', '&amp; a second sentence.'],
-  typeSpeed: 40
-};
-
-var typed = new Typed('.element', options);
-  </script>
+	<script>
+		var typed1 = new Typed('#typed1', {
+    		stringsElement: '#typed-strings1',
+		typeSpeed: 48,
+		backSpeed: 24,
+		fadeOut: false,
+    		loop: true
+  		});
+	</script>
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
