--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Kevin <span class="wave">'KD'</span> Dorsey</h2>
           <div id="typed-strings1">
-              <p><strong>Build Sales Teams</strong></p>
-              <p><strong>Train Sales Reps</strong></p>
-              <p><strong>Drives Behavior</strong></p>
-              <p><strong>Mentorship & Coaching</strong></p>
-              <p><strong>Leadership Training</strong></p>
-              <p><strong>Live Better Sell Better</strong></p>
-              <p><strong>Focus on the "Person" in "SalesPerson"</strong></p>
+              <h2><strong>Build Sales Teams</strong></h2>
+              <h2><strong>Train Sales Reps</strong></h2>
+              <h2><strong>Drives Behavior</strong></h2>
+              <h2><strong>Mentorship & Coaching</strong></h2>
+              <h2><strong>Leadership Training</strong></h2>
+              <h2><strong>Live Better Sell Better</strong></h2>
+              <h2><strong>Focus on the "Person" in "SalesPerson"</strong></h2>
           </div>
           <span id="typed1"></span>
-          <div>
+          <div><br>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
