--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <div class="levitate">
-            <h1 class="text-light"><a href="#intro" class="scrollto">Kevin <span class="wave">'KD'</span> Dorsey</a></h1>
+            <h1 class="text-light"><a href="#intro" class="scrollto">Kevin <span><span class="wave">'KD'</span></span> Dorsey</a></h1>
         </div>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
