--- a/index.html
+++ b/index.html
@@ -929,9 +929,9 @@
                   <div class="footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                      <li><a href="#intro">Home</a></li>
-                      <li><a href="#about">Meet 'KD'</a></li>
-                      <li><a href="#services">Awards</a></li>
+                      <li><a href="#intro page-scroll">Home</a></li>
+                      <li><a href="#about page-scroll">Meet 'KD'</a></li>
+                      <li><a href="#services page-scroll">Awards</a></li>
                       <li><a href="#">Terms of Service</a></li>
                       <li><a href="#">Privacy Policy</a></li>
                     </ul>
