--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <li><a href="#about">Meet 'KD'</a></li>
           <li><a href="#services">Awards</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#team">Niche</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
