--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="about-content">
               <h2>Meet <span><span class="wave">'KD'</span></span></h2>
               <h3>Linkedin Top Sales Voice 2020 ~ SaaS Sales Consultant ~ Sales Dev. Exec of the Year ~ InsideSales Top 10 Sales Leader ~ Avid Swearer</h3>
-              <p>Formal Education will make you a living… Self Education will make you a fortune. ~ Jim Rohn</p>
+              <p>Formal Education will make you a living, Self Education will make you a fortune. ~ Jim Rohn</p>
               <p>As I've grown as a leader I have a better understanding of what truly drives behavior, motivation, and long term success. If we can make better people, the sales will follow.</p>
               <ul>
                 <li><span class="wave"><i class="ion-android-checkmark-circle"></i></span> I love scaling sales teams. I have built teams from 0-150+ reps, revenus from 0-$75M (and counting). I believe in processes and systems, paired with skill development, as the code to success.</li>
