--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <div class="levitate">
-            <h1 class="text-light"><a href="#intro" class="scrollto">Kevin <span><span class="wave">'KD'</span></span> Dorsey</a></h1>
+            <h1 class="text-light"><a href="#intro" class="scrollto">Kevin <span class="wave">'KD'</span> Dorsey</a></h1>
         </div>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
@@ -153,7 +153,7 @@
 
           <div class="col-lg-7 col-md-6">
             <div class="about-content">
-              <h2>Meet <span><span class="wave">'KD'</span></span></h2>
+              <h2>Meet <span class="wave">'KD'</span></h2>
               <h3>Linkedin Top Sales Voice 2020 ~ SaaS Sales Consultant ~ Sales Dev. Exec of the Year ~ InsideSales Top 10 Sales Leader ~ Avid Swearer</h3>
               <p>Formal Education will make you a living, Self Education will make you a fortune. ~ Jim Rohn</p>
               <p>As I've grown as a leader I have a better understanding of what truly drives behavior, motivation, and long term success. If we can make better people, the sales will follow.</p>
@@ -911,7 +911,7 @@
                 <div class="col-sm-6">
 
                   <div class="footer-info">
-                    <h3>Kevin <span><span class="wave">'KD'</span></span> Dorsey</h3>
+                    <h2>Kevin <span class="wave">'KD'</span> Dorsey</h2>
                     <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
                   </div>
 
