--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
           <meta property="og:site_name" content="Kevin 'KD' Dorsey" /> <!-- website name -->
           <meta property="og:site" content="https://abtinbidgoli.github.io/kd" /> <!-- website link -->
-          <meta property="og:title" content="Live Better, Sell Better"/> <!-- title shown in the actual shared post -->
+          <meta property="og:title" content="Kevin 'KD' Dorsey Live Better, Sell Better"/> <!-- title shown in the actual shared post -->
           <meta property="og:description" content="Focusing on the 'Person' in SalesPerson, just as much as the Sales." /> <!-- description shown in the actual shared post -->
           <meta property="og:image" content="img/about-img.jpg" /> <!-- image link, make sure it's jpg -->
           <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
