--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
-          <li><a href="#about">Meet 'KD'</a></li>
+	  <li><a href="#about">Meet <span class="wave">'KD'</span></a></li>
           <li><a href="#services">Awards</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Niche</a></li>
