--- a/index.html
+++ b/index.html
@@ -732,11 +732,11 @@
         </header>
 
         <div class="owl-carousel clients-carousel">
-          <img src="img/clients/client-1.png" alt="">
-          <img src="img/clients/client-2.png" alt="">
-          <img src="img/clients/client-3.png" alt="">
-          <img src="img/clients/client-4.png" alt="">
-          <img src="img/clients/client-5.png" alt="">
+          <a href="https://ambition.com/" target="_blank" rel="noopener noreferrer"><img src="img/clients/client-1.png" alt="Ambition"></a>
+          <a href="https://www.patientpop.com/" target="_blank" rel="noopener noreferrer"><img src="img/clients/client-2.png" alt="Patient Pop"></a>
+          <a href="https://salesloft.com/" target="_blank" rel="noopener noreferrer"><img src="img/clients/client-3.png" alt="Sales Loft"></a>
+          <a href="https://www.servicetitan.com/" target="_blank" rel="noopener noreferrer"><img src="img/clients/client-4.png" alt="Service Titan"></a>
+          <a href="https://snacknation.com/" target="_blank" rel="noopener noreferrer"><img src="img/clients/client-5.png" alt="Snack Nation"></a>
         </div>
 
       </div>
