--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kevin 'KD' Dorsey Live Better, Sell Better</title>
+  <title>Inside Sales Excellence ~ Live Better, Sell Better</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Kevin KD Dorsey, Live Better, Sell Better" name="keywords">
   <meta content="Focusing on the 'Person' in SalesPerson, just as much as the Sales." name="description">
       <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-          <meta property="og:site_name" content="Kevin 'KD' Dorsey" /> <!-- website name -->
+          <meta property="og:site_name" content="Inside Sales Excellence ~ Live Better, Sell Better" /> <!-- website name -->
           <meta property="og:site" content="https://abtinbidgoli.github.io/kd" /> <!-- website link -->
-          <meta property="og:title" content="Kevin 'KD' Dorsey Live Better, Sell Better"/> <!-- title shown in the actual shared post -->
+          <meta property="og:title" content="Inside Sales Excellence ~ Live Better, Sell Better"/> <!-- title shown in the actual shared post -->
           <meta property="og:description" content="Focusing on the 'Person' in SalesPerson, just as much as the Sales." /> <!-- description shown in the actual shared post -->
-          <meta property="og:image" content="img/about-img.jpg" /> <!-- image link, make sure it's jpg -->
+          <meta property="og:image" content="img/why-us.jpg" /> <!-- image link, make sure it's jpg -->
           <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
           <meta property="og:type" content="article" />
 
@@ -68,7 +68,7 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <div class="levitate">
-            <h1 class="text-light"><a href="#intro" class="scrollto">Kevin <span class="wave">'KD'</span> Dorsey</a></h1>
+            <h1 class="text-light"><a href="#intro" class="scrollto">Inside <span class="wave">Sales</span> Excellence</a></h1>
         </div>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
@@ -260,7 +260,7 @@
       <div class="container-fluid">
         
         <header class="section-header">
-          <h3>Why <span class="wave">'KD'</span></h3>
+          <h3>Inside <span class="wave">Sale</span> Excellence</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
         </header>
 
@@ -349,8 +349,10 @@
             <p class="cta-text"> Inside Sales Excellence. Live Better. Sell Better.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-              <span class="wave"><a class="cta-btn align-middle" href="https://www.patreon.com/insidesalesexcellence" target="_blank" rel="noopener noreferrer">Join the Patreon</a></span>
-          </div>
+              <span class="wave"><a class="cta-btn align-middle" href="https://www.patreon.com/insidesalesexcellence" target="_blank" rel="noopener noreferrer">Join the Squad</a></span>
+    	      <span class="wave"><a class="cta-btn align-right" href="https://player.captivate.fm/show/c4ab8896-5c37-43dc-a80e-efc5c2f99b1e#" target="_blank" rel="noopener noreferrer">Listen via Captivate</a></span>
+          
+	</div>
         </div>
 
       </div>
