--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Guest Appearances</li>
-              <li data-filter=".filter-card">Linkedin Articles</li>
-              <li data-filter=".filter-web">Live Better</li>
+              <li data-filter=".filter-card">Live Better</li>
+              <li data-filter=".filter-web">Linkedin Articles</li>
             </ul>
           </div>
         </div>
@@ -430,11 +430,10 @@
               <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">App 1</a></h4>
-                <p>App</p>
+                <h4><a href="#" target="_blank" rel="noopener noreferrer">App 1</a></h4>
+                <p>Curated Guest Appearance</p>
                 <div>
                   <a href="img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
@@ -446,12 +445,12 @@
               <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">Web 3</a></h4>
-                <p>Web</p>
+                <h4><a href="https://www.linkedin.com/pulse/i-am-strong-tired-kevin-kd-dorsey/" target="_blank" rel="noopener noreferrer">I am strong, but I am tired...</a></h4>
+                <p>Curated via Linkedin Article</p>
                 <div>
-                  <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </div>
+                  <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="I am strong, but I am tired..." title="Preview"><i class="ion ion-eye"></i></a>
+                  
+		  </div>
               </div>
             </div>
           </div>
@@ -462,11 +461,10 @@
               <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">App 2</a></h4>
-                <p>App</p>
+                <h4><a href="#" target="_blank" rel="noopener noreferrer">App 2</a></h4>
+                <p>Curated Guest Appearance</p>
                 <div>
                   <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
@@ -478,11 +476,10 @@
               <img src="img/portfolio/card2.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">Card 2</a></h4>
-                <p>Card</p>
+                <h4><a href="#" target="_blank" rel="noopener noreferrer">Card 2</a></h4>
+                <p>Live Better</p>
                 <div>
                   <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
@@ -494,11 +491,10 @@
               <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">Web 2</a></h4>
-                <p>Web</p>
+                <h4><a href="https://www.linkedin.com/pulse/your-sales-methodology-irrelevant-kevin-dorsey/" target="_blank" rel="noopener noreferrer">Your Sales Methodology is Irrelevant</a></h4>
+                <p>Curated via Linkedin Article</p>
                 <div>
-                  <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Your Sales Methodology is Irrelevant" title="Preview"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -510,11 +506,10 @@
               <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">App 3</a></h4>
-                <p>App</p>
+                <h4><a href="#" target="_blank" rel="noopener noreferrer">App 3</a></h4>
+                <p>Curated Guest Appearance</p>
                 <div>
                   <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
@@ -526,11 +521,10 @@
               <img src="img/portfolio/card1.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">Card 1</a></h4>
-                <p>Card</p>
+                <h4><a href="#" target="_blank" rel="noopener noreferrer">Card 1</a></h4>
+                <p>Live Better</p>
                 <div>
                   <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
@@ -542,11 +536,10 @@
               <img src="img/portfolio/card3.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">Card 3</a></h4>
-                <p>Card</p>
+                <h4><a href="#" target="_blank" rel="noopener noreferrer">Card 3</a></h4>
+                <p>Live Better</p>
                 <div>
                   <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
@@ -558,11 +551,10 @@
               <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="#">Web 1</a></h4>
-                <p>Web</p>
+                <h4><a href="#" target="_blank" rel="noopener noreferrer">Web 1</a></h4>
+                <p>Curated via Linkedin Article</p>
                 <div>
                   <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
