--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <h4><a href="https://www.youtube.com/watch?v=6uVfRyJ8bwM&t=351s" target="_blank" rel="noopener noreferrer">Surf and Sales</a></h4>
                 <p>Curated Guest Appearance</p>
                 <div>
-                  <a href="https://www.youtube.com/watch?v=6uVfRyJ8bwM&t=351s" data-lightbox="portfolio" data-title="Surf and Sales" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://www.youtube.com/watch?v=6uVfRyJ8bwM&t=351s" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -431,7 +431,7 @@
                 <h4><a href="https://www.linkedin.com/pulse/i-am-strong-tired-kevin-kd-dorsey/" target="_blank" rel="noopener noreferrer">I am strong, but I am tired...</a></h4>
                 <p>Curated via Linkedin Article</p>
                 <div>
-                  <a href="https://www.linkedin.com/pulse/i-am-strong-tired-kevin-kd-dorsey/" class="link-preview" data-lightbox="portfolio" data-title="I am strong, but I am tired..." title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://www.linkedin.com/pulse/i-am-strong-tired-kevin-kd-dorsey/" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                   
 		  </div>
               </div>
@@ -447,7 +447,7 @@
                 <h4><a href="https://www.youtube.com/watch?v=Vn99VeAK2nM" target="_blank" rel="noopener noreferrer">SalesHacker</a></h4>
                 <p>Curated Guest Appearance</p>
                 <div>
-                  <a href="https://www.youtube.com/watch?v=Vn99VeAK2nM" class="link-preview" data-lightbox="portfolio" data-title="SalesHacker" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://www.youtube.com/watch?v=Vn99VeAK2nM" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -462,7 +462,7 @@
                 <h4><a href="#" target="_blank" rel="noopener noreferrer">Card 2</a></h4>
                 <p>Live Better</p>
                 <div>
-                  <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -474,10 +474,10 @@
               <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="https://www.linkedin.com/pulse/your-sales-methodology-irrelevant-kevin-dorsey/" target="_blank" rel="noopener noreferrer">Your Sales Methodology is Irrelevant</a></h4>
+                <h4><a href="https://www.linkedin.com/pulse/your-sales-methodology-irrelevant-kevin-dorsey/" target="_blank" rel="noopener noreferrer">Your Sales Methodology</a></h4>
                 <p>Curated via Linkedin Article</p>
                 <div>
-                  <a href="https://www.linkedin.com/pulse/your-sales-methodology-irrelevant-kevin-dorsey/" class="link-preview" data-lightbox="portfolio" data-title="Your Sales Methodology is Irrelevant" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://www.linkedin.com/pulse/your-sales-methodology-irrelevant-kevin-dorsey/" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -492,7 +492,7 @@
                 <h4><a href="https://www.youtube.com/watch?v=7Ur6iscw60Y&t=11s" target="_blank" rel="noopener noreferrer">JBarrows Sales Training</a></h4>
                 <p>Curated Guest Appearance</p>
                 <div>
-                  <a href="https://www.youtube.com/watch?v=7Ur6iscw60Y&t=11s" class="link-preview" data-lightbox="portfolio" data-title="JBarrows Sales Training" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://www.youtube.com/watch?v=7Ur6iscw60Y&t=11s" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -507,7 +507,7 @@
                 <h4><a href="#" target="_blank" rel="noopener noreferrer">Card 1</a></h4>
                 <p>Live Better</p>
                 <div>
-                  <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -522,7 +522,7 @@
                 <h4><a href="#" target="_blank" rel="noopener noreferrer">Card 3</a></h4>
                 <p>Live Better</p>
                 <div>
-                  <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -537,7 +537,7 @@
                 <h4><a href="https://www.linkedin.com/pulse/before-cheat-kevin-dorsey/" target="_blank" rel="noopener noreferrer">Before they cheat...</a></h4>
                 <p>Curated via Linkedin Article</p>
                 <div>
-                  <a href="https://www.linkedin.com/pulse/before-cheat-kevin-dorsey/" class="link-preview" data-lightbox="portfolio" data-title="Before they cheat..." title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://www.linkedin.com/pulse/before-cheat-kevin-dorsey/" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
