--- a/index.html
+++ b/index.html
@@ -413,10 +413,10 @@
               <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="https://www.youtube.com/watch?v=6uVfRyJ8bwM&t=351s" target="_blank" rel="noopener noreferrer">Surf and Sales</a></h4>
+                <h4><a href="https://youtu.be/6uVfRyJ8bwM" target="_blank" rel="noopener noreferrer">Surf and Sales</a></h4>
                 <p>Curated Guest Appearance</p>
                 <div>
-                  <a href="https://www.youtube.com/watch?v=6uVfRyJ8bwM&t=351s" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
+                  <a href="https://youtu.be/6uVfRyJ8bwM" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
@@ -489,10 +489,10 @@
               <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="https://www.youtube.com/watch?v=7Ur6iscw60Y&t=11s" target="_blank" rel="noopener noreferrer">JBarrows Sales Training</a></h4>
+                <h4><a href="https://youtu.be/7Ur6iscw60Y" target="_blank" rel="noopener noreferrer">JBarrows Sales Training</a></h4>
                 <p>Curated Guest Appearance</p>
                 <div>
-                  <a href="https://www.youtube.com/watch?v=7Ur6iscw60Y&t=11s" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
+                  <a href="https://youtu.be/7Ur6iscw60Y" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
                 </div>
               </div>
             </div>
