--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">552</span>
+            <span data-toggle="counter-up">553</span>
             <p>Patreons</p>
           </div>
 
@@ -303,7 +303,7 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">1,364</span>
-            <p>Number of Sales Reps Impact</p>
+            <p>Number of Sales Reps Impacted</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
@@ -584,6 +584,13 @@
                 <h3>Jessica Dorsey</h3>
                 <h4>Proud Wife & Proud Mom</h4>
                 <p>Incredible resource that’s a fun listen! It’s so nice to have a no fluff, loaded resource in a podcast . Only listened to the first few so far, and already have taken pages of notes on things I can implement right away. Thank you!!</p>
+              </div>
+		        
+              <div class="testimonial-item">
+                <img src="img/testimonial-4.jpg" class="testimonial-img" alt="Thomas P">
+                <h3>Thomas P.</h3>
+                <h4></h4>
+                <p>Masterful! Amazing! I'm new to technical sales (about 1.5 years now). I've viewed several courses both self-directed and corporate-mandated about sales acumen. None of them distilled the tactical, strategic, and insightful elements for successful selling into a pragmatic approach like KD does. The course is unbelievably practical and can be applied right now if you are willing to put the work in. This hands down a 5-star course. He is transferring tons of value in a succinct and authentic manner. I found every minute engaging. I will execute this instruction right now and rewatch this course several times to grow a deeper understanding and improved sales intuition for my own sales process. Thanks, KD!</p>
               </div>
  
 
