--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <div class="levitate">
-            <h1 class="text-light"><a href="#intro" class="scrollto">Inside <span class="wave">Sales</span> Excellence</a></h1>
+            <h1 class="text-light"><a href="#why-us" class="scrollto">Inside <span class="wave">Sales</span> Excellence</a></h1>
         </div>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#why-us">Home</a></li>
+          <li class="active"><a href="#intro">Home</a></li>
 	  <li><a href="#about">Meet <span class="wave">'KD'</span></a></li>
           <li><a href="#services">Awards</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
