--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         
         <header class="section-header">
           <h3>Welcome to Inside <span class="wave">Sales</span> Excellence</h3>
-          <p>Unreleased Conference Presentations & Trainings: Available nowhere else, internal pieces of training & conference presentations I’ve given over the past 7 years. 1-2 added each and every month. Updated. Improved. Re-Recorded all for this group only. Worth $1000s on their own</p>
+          <p>Unreleased Conference Presentations & Trainings: Available nowhere else, internal pieces of training & conference presentations I’ve given over the past 7 years. 1-2 added each and every month. Updated. Improved. Re-Recorded all for this group only. Worth $1000s on their own.</p>
         </header>
 
         <div class="row">
