--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
            <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Students should not be brand new to sales, and should understand the steps of a typical sales cycle and common terminology<br>
            <span class="wave"><i class="ion-android-checkmark-circle"></i></span> This course will not cover prospecting, but instead focuses on how to sell to the prospect once they're in the door<br>
 		  </p>
-		  <span class="wave"><a class="cta-btn align-left" href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer">B2B Sales via Udemy</a></span>
+		  <span class="wave"><a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer">B2B Sales via Udemy</a></span>
           
         
             </ul>
@@ -703,7 +703,7 @@
 
         <header class="section-header">
           <h3>Pricing</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p>Looking for ongoing training and support?</p>
         </header>
 
         <div class="row flex-items-xs-middle flex-items-xs-center">
@@ -712,19 +712,19 @@
           <div class="col-xs-12 col-lg-4">
             <div class="card">
               <div class="card-header">
-                <h3><span class="currency">$</span>19<span class="period">/month</span></h3>
+                <h3><span class="currency">$</span>10<span class="period">/month</span></h3>
               </div>
               <div class="card-block">
                 <h4 class="card-title"> 
-                  Basic Plan
+                  Inside Sales Excellence Patreon
                 </h4>
                 <ul class="list-group">
-                  <li class="list-group-item">Odio animi voluptates</li>
-                  <li class="list-group-item">Inventore quisquam et</li>
-                  <li class="list-group-item">Et perspiciatis suscipit</li>
-                  <li class="list-group-item">24/7 Support System</li>
+                  <li class="list-group-item">Unreleased Conference Presentations & Trainings</li>
+                  <li class="list-group-item">Private Podcast ~ Live Better. Sell Better</li>
+                  <li class="list-group-item">Archived Webinars and Podcasts</li>
+                  <li class="list-group-item">Direct Chat and Access</li>
                 </ul>
-                <a href="#" class="btn">Choose Plan</a>
+                <a href="https://www.patreon.com/insidesalesexcellence" class="btn" target="_blank" rel="noopener noreferrer">Inside Sales Excellence Patreon</a>
               </div>
             </div>
           </div>
@@ -737,15 +737,15 @@
               </div>
               <div class="card-block">
                 <h4 class="card-title"> 
-                  Regular Plan
+                  B2B Masterclass Course
                 </h4>
                 <ul class="list-group">
-                  <li class="list-group-item">Odio animi voluptates</li>
-                  <li class="list-group-item">Inventore quisquam et</li>
-                  <li class="list-group-item">Et perspiciatis suscipit</li>
-                  <li class="list-group-item">24/7 Support System</li>
+                  <li class="list-group-item">Foster the right mindset to confidently reach your sales goals</li>
+                  <li class="list-group-item">Understand your prospect and the problems they're trying to solve</li>
+                  <li class="list-group-item">Perfect your demo/pitch to make them want what you're selling</li>
+                  <li class="list-group-item">Conduct world~class follow up that makes it easy for your prospect to buy</li>
                 </ul>
-                <a href="#" class="btn">Choose Plan</a>
+                <a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" class="btn" target="_blank" rel="noopener noreferrer">B2B Masterclass Course</a>
               </div>
             </div>
           </div>
@@ -754,19 +754,19 @@
           <div class="col-xs-12 col-lg-4">
             <div class="card">
               <div class="card-header">
-                <h3><span class="currency">$</span>39<span class="period">/month</span></h3>
+                <h3><span class="currency">$</span>$$$<span class="period">/hour</span></h3>
               </div>
               <div class="card-block">
                 <h4 class="card-title"> 
-                  Premium Plan
+                  Pick my Brain
                 </h4>
                 <ul class="list-group">
-                  <li class="list-group-item">Odio animi voluptates</li>
-                  <li class="list-group-item">Inventore quisquam et</li>
-                  <li class="list-group-item">Et perspiciatis suscipit</li>
+                  <li class="list-group-item">1:1 Coaching</li>
+                  <li class="list-group-item">Sales Training</li>
+                  <li class="list-group-item">Speaking Events</li>
                   <li class="list-group-item">24/7 Support System</li>
                 </ul>
-                <a href="#" class="btn">Choose Plan</a>
+                <a href="#" class="btn" target="_blank" rel="noopener noreferrer">Pick my Brain</a>
               </div>
             </div>
           </div>
