--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="col-lg-5 col-md-6">
               <div class="levitate">
             <div class="about-img">
-              <img src="img/about-img.jpg" alt="">
+              <img src="img/about-img.jpg" alt="Kevin 'KD' Dorsey">
             </div>
             </div>
           </div>
@@ -252,7 +252,7 @@
           <div class="col-lg-6">
               <div class="levitate">
             <div class="why-us-img">
-              <a href="https://player.captivate.fm/show/c4ab8896-5c37-43dc-a80e-efc5c2f99b1e#" target="_blank" rel="noopener noreferrer"><img src="img/why-us.jpg" alt="" class="img-fluid"></a>
+              <a href="https://player.captivate.fm/show/c4ab8896-5c37-43dc-a80e-efc5c2f99b1e#" target="_blank" rel="noopener noreferrer"><img src="img/why-us.jpg" alt="Live Better Sell Better" class="img-fluid"></a>
             </div>
           </div>
               </div>
@@ -345,10 +345,10 @@
 
         <div class="row feature-item">
           <div class="col-lg-6 wow fadeInUp">
-              <span class="wave"><img src="img/features-1.svg" class="img-fluid" alt=""></span>
+              <span class="wave"><img src="img/features-1.svg" class="img-fluid" alt="B2B Sales Masterclass: People-Focused Selling"></span>
           </div>
           <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-            <h4>B2B Sales Masterclass: People-Focused Selling</h4>
+            <span class="wave"><a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer"><h4>B2B Sales Masterclass: People-Focused Selling</a></span></h4>
             <p>Close deals using world-class discovery, demos, follow-up, and objection handling WITHOUT any shady or pushy tactics.</p>
             <p>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Foster the right mindset to confidently reach your sales goals<br>
@@ -365,7 +365,7 @@
 
         <div class="row feature-item mt-5 pt-5">
           <div class="col-lg-6 wow fadeInUp order-1 order-lg-2">
-              <span class="wave"><img src="img/features-2.svg" class="img-fluid" alt=""></span>
+              <span class="wave"><img src="img/features-2.svg" class="img-fluid" alt="B2B Sales Masterclass: People-Focused Selling"></span>
           </div>
 
           <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1">
@@ -373,8 +373,7 @@
 		  <p>
            <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Students should not be brand new to sales, and should understand the steps of a typical sales cycle and common terminology<br>
            <span class="wave"><i class="ion-android-checkmark-circle"></i></span> This course will not cover prospecting, but instead focuses on how to sell to the prospect once they're in the door<br>
-		  </p>
-		  <span class="wave"><a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" class="btn" target="_blank" rel="noopener noreferrer">B2B Sales via Udemy</a></span>
+		  </p> 
           
         
             </ul>
