--- a/index.html
+++ b/index.html
@@ -300,12 +300,17 @@
             <span data-toggle="counter-up">142</span>
             <p>Exlusive Patreon Posts</p>
           </div>
-
+		
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,364</span>
-            <p>Number of Sales Reps Impacted</p>
+            <span data-toggle="counter-up">1,182</span>
+            <p>Number of B2B Sales Masterclass Students</p>
           </div>
 
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">2,424</span>
+            <p>Number of Sales Reps Impacted</p>
+          </div>
+		
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">18</span>
             <p>Years Experience</p>
@@ -348,7 +353,7 @@
               <span class="wave"><img src="img/features-1.svg" class="img-fluid" alt="B2B Sales Masterclass: People-Focused Selling"></span>
           </div>
           <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-            <span class="wave"><a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer"><h4>B2B Sales Masterclass: People-Focused Selling</a></span></h4>
+            <a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer"><h4><span class="wave">B2B Sales Masterclass: People-Focused Selling</span></h4></a>
             <p>Close deals using world-class discovery, demos, follow-up, and objection handling WITHOUT any shady or pushy tactics.</p>
             <p>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Foster the right mindset to confidently reach your sales goals<br>
@@ -609,7 +614,7 @@
       <div class="container">
         <div class="section-header">
           <h3> A Man of Many <span class="wave">Hats</span></h3>
-          <p>Own your shit, Grow Yourself, Ask for Help, Serve Your People</p>
+          <p>Own your S***, Grow Yourself, Ask for Help, Serve Your People</p>
         </div>
 
         <div class="row">
@@ -732,7 +737,7 @@
           <div class="col-xs-12 col-lg-4">
             <div class="card">
               <div class="card-header">
-                <h3><span class="currency">$</span>29<span class="period">/month</span></h3>
+                <h3><span class="currency">$</span>94.99<span class="period">/Masterclass</span></h3>
               </div>
               <div class="card-block">
                 <h4 class="card-title"> 
