--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
               </div>
               <div class="card-block">
                 <h4 class="card-title"> 
-                  B2B Masterclass Course
+                  B2B Sales Masterclass
                 </h4>
                 <ul class="list-group">
                   <li class="list-group-item">Foster the right mindset to confidently reach your sales goals</li>
@@ -749,7 +749,7 @@
                   <li class="list-group-item">Perfect your demo/pitch to make them want what you're selling</li>
                   <li class="list-group-item">Conduct world~class follow up that makes it easy for your prospect to buy</li>
                 </ul>
-                <span class="wave"><a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" class="btn" target="_blank" rel="noopener noreferrer">B2B Masterclass Course</a></span>
+                <span class="wave"><a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" class="btn" target="_blank" rel="noopener noreferrer">B2B Sales Masterclass</a></span>
               </div>
             </div>
           </div>
