--- a/index.html
+++ b/index.html
@@ -353,7 +353,9 @@
               <span class="wave"><img src="img/features-1.svg" class="img-fluid" alt="B2B Sales Masterclass: People-Focused Selling"></span>
           </div>
           <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-            <a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer"><h4><span class="wave">B2B Sales Masterclass: People-Focused Selling</span></h4></a>
+            <div class="levitate">
+		    <a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer"><h4>B2B <span class="wave">Sales</span> Masterclass: People-Focused Selling</h4></a>
+		  </div>
             <p>Close deals using world-class discovery, demos, follow-up, and objection handling WITHOUT any shady or pushy tactics.</p>
             <p>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Foster the right mindset to confidently reach your sales goals<br>
