--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
               <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
                   </div>
               <div class="portfolio-info">
-                <h4><a href="https://www.linkedin.com/pulse/i-am-strong-tired-kevin-kd-dorsey/" target="_blank" rel="noopener noreferrer">I am strong, but I am tired...</a></h4>
+                <h4><a href="https://www.linkedin.com/pulse/i-am-strong-tired-kevin-kd-dorsey/" target="_blank" rel="noopener noreferrer">I am strong</a></h4>
                 <p>Curated via Linkedin Article</p>
                 <div>
                   <a href="https://www.linkedin.com/pulse/i-am-strong-tired-kevin-kd-dorsey/" target="_blank" rel="noopener noreferrer"><i class="ion ion-eye"></i></a>
