--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>Kevin <span class="wave">'KD'</span> Dorsey</h2>
+		<h2><a href="#about">Kevin <span class="wave">'KD'</span> Dorsey</a></h2>
           <div id="typed-strings1">
               <h2><strong>Build Sales Teams</strong></h2>
               <h2><strong>Train Sales Reps</strong></h2>
