--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
           <span id="typed1"></span>
           <div><br>
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="#call-to-action" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
   
