--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
   
         <div class="col-md-6 intro-img order-md-last order-first">
-          <img src="img/intro-img.svg" alt="" class="img-fluid">
+          <img src="img/intro-img.svg" alt="Intro" class="img-fluid">
         </div>
       </div>
 
@@ -142,8 +142,8 @@
           <div id="typed-strings2">
               <h2><strong>~ Linkedin Top Sales Voice 2020 ~</strong></h2>
               <h2><strong>~ SaaS Sales Consultant ~</strong></h2>
-              <h2><strong>~ Sales Dev. Exec. of the Year ~</strong></h2>
-              <h2><strong>~ InsideSales Top 10 Sales Leader ~</strong></h2>
+              <h2><strong>~ Sales Development Executive of the Year ~</strong></h2>
+              <h2><strong>~ Inside Sales Top 10 Sales Leader ~</strong></h2>
               <h2><strong>~ Avid Swearer ~</strong></h2>
           </div>
           <span id="typed2"></span>
