--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 <img src="img/ME.jpg" class="testimonial-img" alt="Mateo Elvira">
                 <h3>Mateo Elvira</h3>
                 <h4><a href="https://elvira.media/" target="_blank" rel="noopener noreferrer">Elvira Media, LLC</a></h4>
-                <p>I was an SDR on KDs team at ServiceTitan, where I learned how to pursuit excellence, continuously train, and always try new things. He has inspired me to take on endeeavors of my own following the same advice he blessed me years back. Thanks KD for everything.</p>
+                <p>I was an SDR on KDs team at ServiceTitan, where I learned how to pursuit excellence, continuously train, and always try new things. He has inspired me to take on endeavors of my own following the same advice he blessed me years back. Thanks KD for everything.</p>
               </div>
     
               <div class="testimonial-item">
