--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <h2><strong>~ Inside Sales Top 10 Sales Leader ~</strong></h2>
               <h2><strong>~ Avid Swearer ~</strong></h2>
           </div>
-          <span id="typed2"></span>
+          <span id="typed2"></span><br>
               <p>Formal Education will make you a living, Self Education will make you a fortune. ~ Jim Rohn</p>
               <p>As I've grown as a leader I have a better understanding of what truly drives behavior, motivation, and long term success. If we can make better people, the sales will follow.</p>
               <ul>
