--- a/index.html
+++ b/index.html
@@ -322,6 +322,11 @@
             <span data-toggle="counter-up">18</span>
             <p>Years Experience</p>
           </div>
+				
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">22</span>
+            <p>Live Better Sell Better Podcasts</p>
+          </div>
   
         </div>
 
