--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
         <div class="col-md-6 intro-info order-md-first order-last">
 		<h2><a href="#about">Kevin <span class="wave">'KD'</span> Dorsey</a></h2>
           <div id="typed-strings1">
-              <h2><strong>Build Sales Teams</strong></h2>
-              <h2><strong>Train Sales Reps</strong></h2>
-              <h2><strong>Drives Behavior</strong></h2>
-              <h2><strong>Mentorship & Coaching</strong></h2>
-              <h2><strong>Leadership Training</strong></h2>
-              <h2><strong>Live Better Sell Better</strong></h2>
-              <h2><strong>Focus on the "Person" in "SalesPerson"</strong></h2>
+              <h2><strong>~ Build Sales Teams ~</strong></h2>
+              <h2><strong>~ Train Sales Reps ~</strong></h2>
+              <h2><strong>~ Drives Behavior ~</strong></h2>
+              <h2><strong>~ Mentorship & Coaching ~</strong></h2>
+              <h2><strong>~ Leadership Training ~</strong></h2>
+              <h2><strong>~ Live Better, Sell Better ~</strong></h2>
+              <h2><strong>~ Focus on the "Person" in "SalesPerson" ~</strong></h2>
           </div>
           <span id="typed1"></span>
           <div><br>
@@ -325,7 +325,7 @@
 				
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">22</span>
-            <p>Live Better Sell Better Podcasts</p>
+            <p>Live Better, Sell Better Podcasts</p>
           </div>
   
         </div>
