--- a/index.html
+++ b/index.html
@@ -326,6 +326,16 @@
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">22</span>
             <p>Live Better, Sell Better Podcasts</p>
+          </div>	
+		
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">81</span>
+            <p>Guest Appearances</p>
+          </div>
+				
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">240</span>
+            <p>Linkedin Articles</p>
           </div>
   
         </div>
