--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
 		
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">81</span>
-            <p>Guest Appearances</p>
+            <p>Curated Guest Appearances</p>
           </div>
 				
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">240</span>
-            <p>Linkedin Articles</p>
+            <p>Published Linkedin Articles</p>
           </div>
   
         </div>
