--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
               <h2><strong>~ Inside Sales Top 10 Sales Leader ~</strong></h2>
               <h2><strong>~ Avid Swearer ~</strong></h2>
           </div>
-          <span id="typed2"></span><br>
-              <p>Formal Education will make you a living, Self Education will make you a fortune. ~ Jim Rohn</p>
+          <span id="typed2"></span>
+              <p><br>Formal Education will make you a living, Self Education will make you a fortune. ~ Jim Rohn</p>
               <p>As I've grown as a leader I have a better understanding of what truly drives behavior, motivation, and long term success. If we can make better people, the sales will follow.</p>
               <ul>
                 <li><span class="wave"><i class="ion-android-checkmark-circle"></i></span> I love scaling sales teams. I have built teams from 0-150+ reps, revenus from 0-$75M (and counting). I believe in processes and systems, paired with skill development, as the code to success.</li>
