--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Kevin <span class="wave">'KD'</span> Dorsey</strong>. All rights reserved ~ Developed by <a href="https://abtinbidgoli.github.io/abe/" target="_blank" rel="noopener noreferrer">com.abtinbidgoli</a>
+	      &copy; Copyright <a href="#"><strong>Kevin <span class="wave">'KD'</span> Dorsey</strong></a>. All rights reserved ~ Developed by <a href="https://abtinbidgoli.github.io/abe/" target="_blank" rel="noopener noreferrer">com.abtinbidgoli</a>
       </div>
       <div class="credits">
       </div>
